@@ -1,0 +1,39 @@
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: test
+Upstream-Contact: <somebody@example.com>
+
+Files: *
+Copyright: Somebody
+License: Apache-2.0
+
+Files: another-file.cc
+Copyright: Somebody Else
+License: CC-BY-SA-3.0
+
+License: Apache-2.0
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+ .
+ http://www.apache.org/licenses/LICENSE-2.0
+ .
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+ .
+ On Debian systems, the complete text of the Apache version 2.0 license
+ can be found in "/usr/share/common-licenses/Apache-2.0".
+
+License: CC-BY-SA-3.0
+ You are free:
+ to Share — to copy, distribute and transmit the work
+ to Remix — to adapt the work
+ Under the following conditions:
+ Attribution — You must attribute the work in the manner specified by
+ the author or licensor (but not in any way that suggests that the
+ endorse you or your use of the work).
+ Share Alike — If you alter, transform, or build upon this work, you
+ may distribute the resulting work only under the same or similar
+ license to this one.
